// Vitest Snapshot v1

exports[`BackTop Component > props.content works fine 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  <span
    class="custom-node"
  >
    TNode
  </span>
</button>
`;

exports[`BackTop Component > props.default works fine 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  <span
    class="custom-node"
  >
    TNode
  </span>
</button>
`;

exports[`BackTop Component > props.shape is equal to circle 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--circle t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  <svg
    class="t-icon t-icon-backtop t-back-top__icon"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <span
    class="t-back-top__text"
  >
    TOP
  </span>
  
</button>
`;

exports[`BackTop Component > props.shape is equal to square 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  <svg
    class="t-icon t-icon-backtop t-back-top__icon"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <span
    class="t-back-top__text"
  >
    TOP
  </span>
  
</button>
`;

exports[`BackTop Component > props.size is equal to medium 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  BackTop
  
</button>
`;

exports[`BackTop Component > props.size is equal to small 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-s"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  BackTop
  
</button>
`;

exports[`BackTop Component > props.theme is equal to dark 1`] = `
<button
  class="t-back-top t-back-top--theme-dark t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  Text
  
</button>
`;

exports[`BackTop Component > props.theme is equal to light 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  Text
  
</button>
`;

exports[`BackTop Component > props.theme is equal to primary 1`] = `
<button
  class="t-back-top t-back-top--theme-primary t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  Text
  
</button>
`;

exports[`BackTop Component > slots.content works fine 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  <span
    class="custom-node"
  >
    TNode
  </span>
  
</button>
`;

exports[`BackTop Component > slots.default works fine 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  <span
    class="custom-node"
  >
    TNode
  </span>
  
</button>
`;
